SEGFAULT: Regression in free_imbuf_seq #28601

Closed
opened 2011-09-09 22:57:07 +02:00 by Troy Sobotka · 8 comments

%%%Loaded an older file and tried to change scenes and a segfault happens.

Can't share the dot blend. Apologies.

Program received signal SIGSEGV, Segmentation fault.
0x0000000000e628c6 in free_imbuf_seq (scene=0x7fffe15ab228, seqbase=0x8,

  check_mem_usage=0, keep_file_handles=1)
  at /home/aphorism/Source/blender/source/blender/blenkernel/intern/sequencer.c:2776

2776 for(seq= seqbase->first; seq; seq= seq->next) {
(gdb) bt

0 0x0000000000e628c6 in free_imbuf_seq (scene=0x7fffe15ab228, seqbase=0x8,

  check_mem_usage=0, keep_file_handles=1)
  at /home/aphorism/Source/blender/source/blender/blenkernel/intern/sequencer.c:2776

1 0x00000000014a4bf7 in rna_Sequence_update (UNUSED_bmain=0x7fffe111aeb8,

  scene=0x7fffe15ab228, ptr=0x7fffe14895d8)
  at /home/aphorism/Source/blender/source/blender/makesrna/intern/rna_sequencer.c:566

2 0x00000000013e9b00 in RNA_property_update_cache_flush (

  bmain=0x7fffe111aeb8, scene=0x7fffe15ab228)
  at /home/aphorism/Source/blender/source/blender/makesrna/intern/rna_access.c:1491

3 0x0000000000d5d09e in BKE_animsys_evaluate_animdata (scene=0x7fffe15ab228,

  id=0x7fffe15a2d88, adt=0x7fffe15a33a8, ctime=1142, recalc=2)
  at /home/aphorism/Source/blender/source/blender/blenkernel/intern/anim_sys.c:2216

4 0x0000000000d5daff in BKE_animsys_evaluate_all_animation (

  main=0x7fffe111aeb8, scene=0x7fffe15ab228, ctime=1142)
  at /home/aphorism/Source/blender/source/blender/blenkernel/intern/anim_sys.c:2334

5 0x0000000000e50717 in scene_update_for_newframe (bmain=0x7fffe111aeb8,

- Type <return> to continue, or q <return> to quit---
  sce=0x7fffe15ab228, lay=1)
  at /home/aphorism/Source/blender/source/blender/blenkernel/intern/scene.c:1029

6 0x0000000000b85803 in ED_update_for_newframe (bmain=0x7fffe111aeb8,

  scene=0x7fffe15ab228, screen=0x7fffe158f6b8, UNUSED_mute=1)
  at /home/aphorism/Source/blender/source/blender/editors/screen/screen_edit.c:1816

7 0x0000000000b84cce in ED_screen_set_scene (C=0x217e388,

  scene=0x7fffe15ab228)
  at /home/aphorism/Source/blender/source/blender/editors/screen/screen_edit.c:1490

8 0x00000000008b7a01 in wm_event_do_notifiers (C=0x217e388)

  at /home/aphorism/Source/blender/source/blender/windowmanager/intern/wm_event_system.c:226

9 0x00000000008b5583 in WM_main (C=0x217e388)

  at /home/aphorism/Source/blender/source/blender/windowmanager/intern/wm.c:383

10 0x00000000008b4b0f in main (argc=1, argv=0x7fffffffe248)

  at /home/aphorism/Source/blender/source/creator/creator.c:1283

%%%

%%%Loaded an older file and tried to change scenes and a segfault happens. Can't share the dot blend. Apologies. Program received signal SIGSEGV, Segmentation fault. 0x0000000000e628c6 in free_imbuf_seq (scene=0x7fffe15ab228, seqbase=0x8, ``` check_mem_usage=0, keep_file_handles=1) at /home/aphorism/Source/blender/source/blender/blenkernel/intern/sequencer.c:2776 ``` 2776 for(seq= seqbase->first; seq; seq= seq->next) { (gdb) bt # 0 0x0000000000e628c6 in free_imbuf_seq (scene=0x7fffe15ab228, seqbase=0x8, ``` check_mem_usage=0, keep_file_handles=1) at /home/aphorism/Source/blender/source/blender/blenkernel/intern/sequencer.c:2776 ``` # 1 0x00000000014a4bf7 in rna_Sequence_update (UNUSED_bmain=0x7fffe111aeb8, ``` scene=0x7fffe15ab228, ptr=0x7fffe14895d8) at /home/aphorism/Source/blender/source/blender/makesrna/intern/rna_sequencer.c:566 ``` # 2 0x00000000013e9b00 in RNA_property_update_cache_flush ( ``` bmain=0x7fffe111aeb8, scene=0x7fffe15ab228) at /home/aphorism/Source/blender/source/blender/makesrna/intern/rna_access.c:1491 ``` # 3 0x0000000000d5d09e in BKE_animsys_evaluate_animdata (scene=0x7fffe15ab228, ``` id=0x7fffe15a2d88, adt=0x7fffe15a33a8, ctime=1142, recalc=2) at /home/aphorism/Source/blender/source/blender/blenkernel/intern/anim_sys.c:2216 ``` # 4 0x0000000000d5daff in BKE_animsys_evaluate_all_animation ( ``` main=0x7fffe111aeb8, scene=0x7fffe15ab228, ctime=1142) at /home/aphorism/Source/blender/source/blender/blenkernel/intern/anim_sys.c:2334 ``` # 5 0x0000000000e50717 in scene_update_for_newframe (bmain=0x7fffe111aeb8, - Type <return> to continue, or q <return> to quit--- ``` sce=0x7fffe15ab228, lay=1) at /home/aphorism/Source/blender/source/blender/blenkernel/intern/scene.c:1029 ``` # 6 0x0000000000b85803 in ED_update_for_newframe (bmain=0x7fffe111aeb8, ``` scene=0x7fffe15ab228, screen=0x7fffe158f6b8, UNUSED_mute=1) at /home/aphorism/Source/blender/source/blender/editors/screen/screen_edit.c:1816 ``` # 7 0x0000000000b84cce in ED_screen_set_scene (C=0x217e388, ``` scene=0x7fffe15ab228) at /home/aphorism/Source/blender/source/blender/editors/screen/screen_edit.c:1490 ``` # 8 0x00000000008b7a01 in wm_event_do_notifiers (C=0x217e388) ``` at /home/aphorism/Source/blender/source/blender/windowmanager/intern/wm_event_system.c:226 ``` # 9 0x00000000008b5583 in WM_main (C=0x217e388) ``` at /home/aphorism/Source/blender/source/blender/windowmanager/intern/wm.c:383 ``` # 10 0x00000000008b4b0f in main (argc=1, argv=0x7fffffffe248) ``` at /home/aphorism/Source/blender/source/creator/creator.c:1283 ``` %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%Attaching dot blend without files.%%%

%%%Attaching dot blend without files.%%%
Author

%%%Linux amd64 (Ubuntu 11.04) r40046%%%

%%%Linux amd64 (Ubuntu 11.04) r40046%%%

%%%Actually, it's NULL-pointer dereference in rna_Sequence_update caused by RNA cache. Not sure why this cache is needed and how it should work, assigning to Joshua.%%%

%%%Actually, it's NULL-pointer dereference in rna_Sequence_update caused by RNA cache. Not sure why this cache is needed and how it should work, assigning to Joshua.%%%
Member

%%%Sergey: These caches are in place to make sure that RNA updates can get called by animsys without slowing things down massively by having a few update callbacks get called thousands of times to perform some update operation requiring only some shared common ancestor (i.e. properties of several modifier properties getting updated, when really, only the ID-block will get used by one RNA update callback).

In this case, I think adding some simple null checks for no editing data is sufficient...%%%

%%%Sergey: These caches are in place to make sure that RNA updates can get called by animsys without slowing things down massively by having a few update callbacks get called thousands of times to perform some update operation requiring only some shared common ancestor (i.e. properties of several modifier properties getting updated, when really, only the ID-block will get used by one RNA update callback). In this case, I think adding some simple null checks for no editing data is sufficient...%%%

%%%I was thinking about checks for NULL but wasn't sure it was correct fix. If you think it's correct i can add them. But how can we be sure there'll be no crashes in other update functions =\ Maybe cache can store scene to which it belongs to?%%%

%%%I was thinking about checks for NULL but wasn't sure it was correct fix. If you think it's correct i can add them. But how can we be sure there'll be no crashes in other update functions =\ Maybe cache can store scene to which it belongs to?%%%

%%%Joshua, i've commited that null-check. Hope you're ok with this.

Troy, should work fine in rev40648. Thanks for the report, closing.%%%

%%%Joshua, i've commited that null-check. Hope you're ok with this. Troy, should work fine in rev40648. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#28601
No description provided.