Fix #28601: SEGFAULT: Regression in free_imbuf_seq

Actually, it's NULL-pointer dereference in rna_Sequence_update caused by RNA cache.

Discussed with Joshua and he thought it's acceptable for now to add
extra NULL-check here.